# flowsurface

./: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  README.JP.md  README.md  package.json  pyproject.toml  pyrightconfig.json
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
.playwright-mcp/: index-text.txt  page-2026-04-09T04-01-00-543Z.yml  page-2026-04-09T04-01-09-037Z.yml  page-2026-04-09T04-02-09-157Z.yml  page-2026-04-09T04-02-17-465Z.yml  ref-text-full.txt
benches/: flowsurface.rs
data/: Cargo.toml
docs/: index.md  order_windows.md  package.json  replay_header.md  tachibana_spec.md
exchange/: Cargo.toml
python/: __init__.py  _client.py  agent_session.py  app.py  auth.py  env.py  narrative.py  notification.py  pane.py  pyproject.toml  replay.py  sidebar.py  tachibana.py  test_launch.py
python/flowsurface_sdk/: env.py
python/tests/: test_env.py
src/: chart.rs  connector.rs  headless.rs  layout.rs  lib.rs  main.rs  replay.rs  replay_api.rs  screen.rs  style.rs
tests/: common_helpers.sh  conftest.py  helpers.py  run_all_binance.sh  s10_range_end.py  s10_range_end.sh  s11_bar_step_discrete.py  s11_bar_step_discrete.sh  s12_pre_start_history.py  s12_pre_start_history.sh  s13_step_backward_quality.py  s13_step_backward_quality.sh  s14_autoplay_event_driven.sh  s16_replay_resilience.sh  s17_error_boundary.sh  s18_endurance.py  s18_endurance.sh  s19_tachibana_chart_snapshot.py  s19_tachibana_chart_snapshot.sh  s1_basic_lifecycle.py  s1_basic_lifecycle.sh  s1b_limit_buy.sh  s1c_market_sell.py  s1c_market_sell.sh  (+60 more)
(+481 files in other folders)
