[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowsurface"
version = "0.1.0"
description = "Python SDK for flowsurface headless replay / RL environment"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.26",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools]
packages = ["flowsurface"]

[tool.setuptools.package-dir]
"flowsurface" = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_launch.py"
python_files = ["test_*.py", "s*.py", "x*.py"]
markers = [
    "e2e: requires a running flowsurface server on port 9876",
]
